增加日志删除
